#2233 - Fix Landing Hero Text overlapped

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -11213,6 +11213,7 @@ _:-ms-fullscreen, :root #loginpopup .login-input {
         position: absolute;
         vertical-align: middle;
         z-index: 1;
+        display:block;
 	}
 	.mob-lang-btn {
 	    float: right;
